# amazing

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
amazing/: Cargo.toml  config.sample.toml
amazing/src/: lib.rs  logger.rs
examples/demo/: .env  Cargo.toml  config.toml
examples/demo/src/: main.rs
examples/demo/src/handler/: demo.rs
examples/demo/src/route/: api.rs
migrations/: 0002_asset_type.sql  0006_account_log.sql  README.md
src/: main.rs
src/handler/: account.rs
src/model/: account.rs  account_log.rs  action_type.rs  asset_type.rs  mod.rs
src/route/: api.rs
src/service/: account.rs  action_type.rs  asset_type.rs  mod.rs
