[package]
name = "amazing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-kit = { version = "0.3", features = ["postgres", "redis"] }
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
redis = { version = "0.27", features = ["tokio-comp"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
validator = { version = "0.19", features = ["derive"] }
